Test harness and changes to run locally