@@ -8,6 +8,7 @@ application {
     applicationDefaultJvmArgs = [
         '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
         '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',
         '-XX:+UseG1GC',
         '-XX:MaxGCPauseMillis=10',
         '-XX:+AlwaysPreTouch',
