@@ -8,6 +8,7 @@ plugins {
 application {
     mainClass = 'com.cobain.oms.harness.HarnessLauncher'
     applicationDefaultJvmArgs = [
+        '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',
         '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
         '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
     ]
